<resources>
    <string-array name="enteries">
        <item>choose</item>
        <item>male</item>
        <item>female</item>
        <item>others</item>
    </string-array>
    <string-array name="reports">
        <item>Lost</item>
        <item>Found</item>
    </string-array>
    <string-array name="device_type">
        <item>Phone</item>
        <item>Tablet</item>
        <item>Laptop</item>
        <item>Desktop</item>
        <item>Camera</item>
        <item>Other</item>
    </string-array>
    <string-array name="login_langs">
        <item>choose</item>
        <item>English</item>
        <item>Kinyarwanda</item>
        <item>French</item>
    </string-array>
    <string-array name="login_langsValues">
        <item> </item>
        <item>en</item>
        <item>rw</item>
        <item>fr</item>
    </string-array>

    <string-array name="Languages">
        <item>English</item>
        <item>Kinyarwanda</item>
        <item>French</item>
    </string-array>
    <string-array name="LanguagesValues">
        <item>en</item>
        <item>rw</item>
        <item>fr</item>
    </string-array>
    <!--end of languages-->
    <!--array of cards-->
    <string-array name="cardstypes">
        <item>ID Card</item>
        <item>Driving License</item>
        <item>Student Card</item>
    </string-array>
    <!--end of cards array-->
    <string name="app_name">LostAndFound</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Are You registered? click to register</string>
    <string name="btn_link_to_login">Already registered? click to login</string>
    <string name="btn_register">Register</string>
    <string name="hint_re_password">Re-Type Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_name">Enter Names</string>
    <string name="hint_phone">Enter Phonenumber</string>
    <string name="hint_location">Enter Address</string>
    <string name="todo">TODO</string>
    <string name="logging_in_message">Logging in...</string>
    <string name="hello_lost_fragment">we are on lost fragment</string>
    <string name="hello_found_fragment">we are on found fragment</string>
    <string name="hint_owner_name">Enter Owner\'s Name</string>
    <string name="hint_card_number">Enter Card Number</string>
    <string name="hint_license_number">Enter License Number</string>
    <string name="hint_found_location">Enter Where You Found it</string>
    <string name="hint_lost_location">Enter Where You Losted it</string>
    <string name="btn_report_found">Report Founded Item</string>
    <string name="btn_report_lost">Report Lost Item</string>
    <string name="hint_device_name">Enter Device Name</string>
    <string name="hint_device_model_name">Enter Device Model Name</string>
    <string name="hint_device_serial_number">Enter Serial Number</string>
    <string name="hint_automobile_name">Enter Automobile Name</string>
    <string name="hint_automobile_model_name">Enter Automobile Model Name</string>
    <string name="hint_automobile_plate_number">Enter Plate Number</string>
    <string name="err_owner_name">Please enter owner name</string>
    <string name="err_id_number">Please enter valid Id number</string>
    <string name="err_found_location">Please enter valid found location</string>
    <string name="err_lost_location">Please enter valid lost location</string>
    <string name="err_device_name">Please enter device name</string>
    <string name="err_device_model_name">Please enter device model name</string>
    <string name="err_device_serial_number">Please enter device serial number</string>
    <string name="err_automobile_name">Please enter automobile name</string>
    <string name="err_automobile_model_name">Please enter automobile model name</string>
    <string name="err_automobile_plate_number">Please enter automobile plate number</string>
    <string name="logout">Logout</string>
    <string name="names">Names</string>
    <string name="idnumber">Id Number</string>
    <string name="location">Location</string>
    <string name="automobile_name">Automobile Name :</string>
    <string name="lost_location">Lost Location:</string>
    <string name="automobile_model_name">Model Name:</string>
    <string name="automobile_plate_number">Plate Number:</string>
    <string name="device_name">Device Name:</string>
    <string name="device_type">Device Type:</string>
    <string name="device_model_name">Device Model Name:</string>
    <string name="device_serial_number">Device SerialNumber:</string>
    <string name="title_activity_settings">Settings</string>
    <!--languages-->
    <string name="chooselang">Choose Language</string>
    <string name="language">Language</string>
    <!--string related to settings-->
    <string name="preferences_category_one">Languages</string>

    <string name="preferences_switch_title">Kinyarwanda</string>
    <string name="preferences_switch_summ">Toggle to enable kinyarwanda</string>
    <string name="preferences_switch_en_title">English</string>
    <string name="preferences_switch_en_summ">Toggle to enable English</string>
    <string name="preferences_switch_fr_title">French</string>
    <string name="preferences_switch_fr_summ">Toggle to enable French</string>

    <string name="preferences_edittext_title">EditText Preference</string>
    <string name="preferences_edittext_default">Default value</string>
    <string name="preferences_edittext_message">Dialog Message</string>

    <string name="preferences_checkbox_title">CheckBox Preference</string>
    <string name="preferences_checkbox_summ">CheckBox Summary</string>
    <string name="names_">Names:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="lost_something">#Lost Something?</string>
    <string name="found_something">#Found Something?</string>
    <string name="creadential_required">Please enter the credentials!</string>
    <string name="password_match">Password must match re-typed password</string>
    <string name="select_item">select an item</string>
    <string name="enter_your_details">Please enter your details!</string>
    <string name="create_new_account">Creating a new account...</string>
    <string name="user_register_success_message">User Registered Successfully.</string>
    <string name="user_register_fail_message">User Registration failed.</string>
    <string name="report_lost_automobile">Reporting automobile lost...</string>
    <string name="report_found_automobile">Reporting automobile found...</string>
    <string name="report_lost_item">Reporting lost item...</string>
    <string name="report_found_item">Reporting found item...</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="change_profile">change profile</string>
    <string name="profile">Profile</string>
    <string name="report_lost">Report lost</string>
    <string name="view_losted">View Losted</string>
    <string name="profile_update_message">profile Updated successful</string>
    <string name="validation_failed">validation failed</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="report_found_message_success">founded item reported successful</string>
    <string name="report_lost_message_success">lost item reported successful</string>
    <string name="app_banner">App banner</string>
    <string name="hint_id_number">Enter Id Number</string>
    <string name="select_picture">Select Picture</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="automobile_found_success">found automobile reported successful</string>
    <string name="automobile_found_error">automobile found report failed</string>
    <string name="automobile_lost_success">lost automobile reported successful</string>
    <string name="automobile_lost_error">automobile lost report error</string>
</resources>
