<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/primary_dark"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >
    <Spinner
        android:id="@+id/spinner_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />
    <EditText
        android:id="@+id/owner_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary"
        android:hint="@string/hint_owner_name"
        android:padding="8dp"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/id_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary"
        android:hint="@string/hint_id_number"
        android:inputType="number"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/found_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary"
        android:hint="@string/hint_found_location"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/lost_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/primary"
        android:hint="@string/hint_lost_location"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <!-- Login Button -->

    <Button
        android:id="@+id/btnReportFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/primary"
        android:text="@string/btn_report_found"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/btnReportLost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/primary"
        android:text="@string/btn_report_lost"
        android:textColor="@color/white" />
</LinearLayout>