<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preferences_category_one">

        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:summary="@string/chooselang"
            android:defaultValue="en"
            android:entries="@array/Languages"
            android:entryValues="@array/LanguagesValues"/>

        <!--<android.support.v7.preference.SwitchPreferenceCompat-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/pref_lang_pref1"-->
            <!--android:summary="@string/preferences_switch_summ"-->
            <!--android:title="@string/preferences_switch_title"/>-->
        <!--<android.support.v7.preference.SwitchPreferenceCompat-->
            <!--android:defaultValue="false"-->
            <!--android:key="@string/pref_lang_pref2"-->
            <!--android:summary="@string/preferences_switch_en_summ"-->
            <!--android:title="@string/preferences_switch_en_title"/>-->
        <!--<android.support.v7.preference.SwitchPreferenceCompat-->
            <!--android:defaultValue="false"-->
            <!--android:key="@string/pref_lang_pref3"-->
            <!--android:summary="@string/preferences_switch_fr_summ"-->
            <!--android:title="@string/preferences_switch_fr_title"/>-->

        <!--<android.support.v7.preference.EditTextPreference-->
            <!--android:defaultValue="@string/preferences_edittext_default"-->
            <!--android:dialogLayout="@layout/pref_dialog_edittext_fix"-->
            <!--android:dialogMessage="@string/preferences_edittext_message"-->
            <!--android:inputType="number"-->
            <!--android:key="@string/pref_pref2"-->
            <!--android:summary="@string/preferences_edittext_summ"-->
            <!--android:title="@string/preferences_edittext_title"/>-->

        <!--<android.support.v7.preference.CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/pref_pref3"-->
            <!--android:summary="@string/preferences_checkbox_summ"-->
            <!--android:title="@string/preferences_checkbox_title"/>-->

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>