<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    android:layout_height="250dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/card_img"
            android:src="@drawable/card_img"
            android:scaleType="centerCrop"
            android:layout_width="120dp"
            android:layout_height="250dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/automobile_owner_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:text="@string/automobile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/automobile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:lines="1"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:text="@string/automobile_model_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/automobile_model_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:lines="1"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:text="@string/automobile_plate_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/automobile_plate_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:lines="1"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:text="@string/lost_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/automobile_lost_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:lines="1"
                android:layout_alignParentLeft="true"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>